--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -169,23 +169,37 @@ echo $BASH_COMMAND
 Разумеется, нужно поддержать объявления функций и прочие управляющие конструкции, числа, ветвления, строки
 +++ </div></details> +++
 
-=== Python
+=== Python (Мирзазянов)
 
-Функции, переменные, присваивания, циклы, ветвления, анонимные функции -- стандартный набор большого количества языков. Потом какие-то языково-специфичные фичи.
-Смотрите также на https://chocopy.org/[ChocoPy].
+Функции, переменные, присваивания, циклы, ветвления, анонимные функции, массивы/списки -- стандартный набор большого количества языков. Смотрите также на https://chocopy.org/[ChocoPy].
 
-=== Ruby
+Из языково-специфичных фич, я предлагаю
+http://codeblog.dhananjaynene.com/2010/01/dynamically-adding-methods-with-metaprogramming-ruby-and-python/[динамическое дополнение методов].
 
-Примерно как в Питоне.
 
-=== Javascript
+=== Ruby (Привалихин)
 
-Стандартный набор языковых конструкций, прототипное наследование. Реализовать все фичи из
+Примерно как в Питоне. Функции, переменные, присваивания, циклы, ветвления, анонимные функции.
+
+Из языково-специфичных фич, я предлагаю динамическое дополнение методов
+http://codeblog.dhananjaynene.com/2010/01/dynamically-adding-methods-with-metaprogramming-ruby-and-python/[(как в питоне)]
+
+=== Javascript (Рагимов)
+
+Стандартный набор языковых конструкций. Реализовать все фичи из
 известного https://www.destroyallsoftware.com/talks/wat[видеообзора] Javascript
 
-=== Kotlin
+Из специфичного для Javascript: прототипное наследование.
 
-Тут из языково-специфичных фич обязательно должна быть какая-то поддержка ООП и вызова методов.
+=== Kotlin (Влаев)
+
+Тут из языково-специфичных фич обязательно должна быть какая-то поддержка ООП и вызова методов (ну вы его сдавали, думаю вопросов пока нет).
+
+=== AWK (Афонина)
+
+Предшественник языка Perl. Тут будет стандартный набор фич, плюс вещи специфичные для AWK.
+Думаю, что стоит почитать http://www.grymoire.com/Unix/Awk.html[умную ссылку] про то, когда надо применять AWK,
+а также подергать оттуда тестовых примеров.
 
 === Haskell (1-2 человека)
 
@@ -223,33 +237,6 @@ LISP известен своими встроенными макросами. П
 
 Наверное, тут тоже можно парочку.
 
-
-=== AWK
-
-Предшественник языка Perl
-
-=== Ideal Parallel Algol (1 человек)
-
-Стандартный модельный язык для использования в научных ситуациях. Числа, ветвления, присваивания, барьеры
-для чтения и записи, а также операция запуска N кусков кода параллельно.
-Функции и циклы не добавляю, а хочу, чтобы были реализованы
-несколько _моделей памяти_ для данной программы.
-
-- sequentional consistency (SC). Исполнение программы произвольно перемежается между параллельными
-участками и выполняет по одной инструкции. Самая интуитивная реализация, ни один процессор такой не соответствует.
-- TSO -- модель процессоров x86. В ней возможны интересные поведения.
-Если изначально `x = EAX = y = EBX = 0`, то после выполнения этих двух участков параллельного кода,
-  x86 может остановиться в состоянии `EAX == 0 && EBX == 0`
-....
-#  Proc 1                           Proc 2
-MOV  [x] ← 1         |         MOV  [y] ← 1
-MOV  EAX ← [y]       |         MOV  EBX ← [x]
-....
-
-- может быть ещё какая-то модель памяти.
-
-Вот https://people.mpi-sws.org/~viktor/wmc/operational.pdf[это] будет хорошей ссылкой, если уметь разбираться
-в исчислениях (я планирую про это как-то рассказывать).
 
 === Cи
 
@@ -298,6 +285,29 @@ https://github.com/bmstu-iu9/refal-5-lambda[отсюда].
 К нему обычно прилагается утилита, которая по описанию генерирует парсер. Сделайте что-то подобное,
 генерируя по описанию парсера код на Haskell/Scala, который выполняет синтаксический анализ.
 Расширениями генерации можно выбрать, например, устранение левой рекурсии.
+
+=== Ideal Parallel Algol (1 человек)
+
+Стандартный модельный язык для использования в научных ситуациях. Числа, ветвления, присваивания, барьеры
+для чтения и записи, а также операция запуска N кусков кода параллельно.
+Функции и циклы не добавляю, а хочу, чтобы были реализованы
+несколько _моделей памяти_ для данной программы.
+
+- sequentional consistency (SC). Исполнение программы произвольно перемежается между параллельными
+участками и выполняет по одной инструкции. Самая интуитивная реализация, ни один процессор такой не соответствует.
+- TSO -- модель процессоров x86. В ней возможны интересные поведения.
+Если изначально `x = EAX = y = EBX = 0`, то после выполнения этих двух участков параллельного кода,
+  x86 может остановиться в состоянии `EAX == 0 && EBX == 0`
+....
+#  Proc 1                           Proc 2
+MOV  [x] ← 1         |         MOV  [y] ← 1
+MOV  EAX ← [y]       |         MOV  EBX ← [x]
+....
+
+- может быть ещё какая-то модель памяти.
+
+Вот https://people.mpi-sws.org/~viktor/wmc/operational.pdf[это] будет хорошей ссылкой, если уметь разбираться
+в исчислениях (я планирую про это как-то рассказывать).
 
 
 
