--- a/papers/pfds/pfds_talk.tex
+++ b/papers/pfds/pfds_talk.tex
@@ -394,9 +394,79 @@
 \section{Левоориентированные кучи}
 
 \begin{frame}[fragile]{}
+Как правило, множества и конечные отображения поддерживают эффективный
+доступ к произвольным элементам. Однако иногда требуется эффективный
+доступ только к \emph{минимальному} элементу.  Структура данных,
+поддерживающая такой режим доступа, называется \term{очередь с
+приоритетами}{priority queue} или \term{куча}{heap}.
+
 \inputminted[firstline=3, lastline=11] {haskell}{code/Heap.hs}
 \end{frame}
-% 
+
+\begin{frame}[fragile]{}
+Часто кучи реализуются через деревья \term{с порядком
+  кучи}{heap-ordered}, т.~е., в которых элемент при каждой вершине не
+больше элементов в поддеревьях. При таком упорядочении минимальный
+элемент дерева всегда находится в корне.\vspace{1cm}
+
+Левоориентированные кучи \cite{Crane1972, Knuth1973a} представляют
+собой двоичные деревья с порядком кучи, обладающие свойством
+\term{левоориентированности}{leftist property}: ранг любого левого поддерева
+не меньше ранга его сестринской правой вершины.  Ранг узла
+определяется как длина его \term{правой периферии}{right spine}
+(т.~е., самого правого пути от данного узла до пустого).  Простым
+следствием свойства левоориентированности является то, что правая
+периферия любого узла~--- кратчайший путь от него к пустому узлу.
+\end{frame}
+
+\begin{frame}[fragile]
+Если у нас есть некоторая структура упорядоченных элементов
+\mintinline{haskell}{Elem}, 
+мы можем представить левоориентированные кучи как
+двоичные деревья, снабженные информацией о ранге.
+\begin{minted}{haskell}
+datatype Heap = E | T Int  Elem.T  Heap Heap
+\end{minted}
+
+Заметим, что элементы правой периферии левоориентированной кучи (да и
+любого дерева с порядком кучи) расположены в порядке возрастания.
+Главная идея левоориентированной кучи заключается в том, что для
+слияния двух куч достаточно слить их правые периферии как
+упорядоченные списки, а затем вдоль полученного пути обменивать
+местами поддеревья при вершинах, чтобы восстановить свойство
+левоориентированности. 
+
+\end{frame}
+
+\begin{frame}[fragile]{}
+\inputminted[firstline=23, lastline=26] {haskell}{code/Heap.hs}
+
+где \lstinline!makeT!~--- вспомогательная функция, вычисляющая ранг
+вершины \lstinline!T! и, если необходимо, меняющая местами ее
+поддеревья.
+
+\inputminted[firstline=30, lastline=36] {haskell}{code/Heap.hs}
+
+\end{frame}
+
+\begin{frame}[fragile]{}
+1
+\end{frame}
+
+\begin{frame}[fragile]{}
+1
+\end{frame}
+
+\begin{frame}[fragile]{}
+1
+\end{frame}
+
+\begin{frame}[fragile]{}
+
+\end{frame}
+
+
+
 % \begin{frame}[allowframebreaks]
 %   \frametitle<presentation>{Ссылки}
 %   \begin{thebibliography}{10}
