FP2019: add link to new lecture

--- a/fp2019/index.asciidoc
+++ b/fp2019/index.asciidoc
@@ -137,8 +137,15 @@ link:01typedesign.pdf[слайды]
 смотреть на https://gitlab.com/Kakadu/haskell-course-demos/tree/master/Parsec[примеры].
 
 [[week5]]
-Неделя 5 (02 октября)
+Неделя 5 (03 октября)
 ---------------------
+
+link:02.pdf[Слайды про алгебру типов]
+
+[[week6]]
+Неделя 5 (10 октября)
+---------------------
+
 
 
 
