--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -191,9 +191,31 @@ http://codeblog.dhananjaynene.com/2010/01/dynamically-adding-methods-with-metapr
 
 Из специфичного для Javascript: прототипное наследование.
 
-=== Kotlin (Влаев)
+=== Kotlin (Влаев + ещё кто-то)
 
-Тут из языково-специфичных фич обязательно должна быть какая-то поддержка ООП и вызова методов (ну вы его сдавали, думаю вопросов пока нет).
+AST делаете вместе, из языково-специфичных фич обязательно должны быть:
+
+. Числа, строки, стнадартные операции над ними, массивы.
+. Объявления классов и методов, статические тоже нужно, чтобы можно быть `main()` написать.
+. Навороченного наследования не требую, наследования классов и интерфейсов не нужно. Пусть только будет в языке один захардкоженный тип `Object`, который надтип всего чего угодно.
+. Разумеется `null`. Также давайте RuntimeExceptions -- которые громко падают, их поймать невозможно (т.е. `try` &`catch` добавлять не нужно) и аннотировать методы бросаемыми исключениями тоже не нужно.
+
+Парсер должен легко параллелиться между людьми.
+
+. Парсер в нормальном смысле этого слова
+. Вложенные коменнтарии: конструкция `*/` должна заканчивать *последний* открытый комментарий, а не все сразу.
+. В некоторых случаях в языке разумно иметь 2-мерный синтаксис, наверное для конструкции switch. Поддержите её и 2-мерный синтаксис там.
+. Хочу, чтобы код мжно было писать, используя препроцессор (`#define` и прочее)
+
+Интерпретатор
+
+. Один пишет интерпретатор
+. Второй генерирует настоящий JVM bytecode и его исполняет
+
+Преобразования программ
+
+. напишу потом.
+
 
 === AWK (Афонина)
 
