--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -58,7 +58,7 @@ Haskell), то это нужно предварительно согласова
 
 Проверяться будет как программа работает, а также будут вопросы по коду программы (потому что все задачи гуглятся).
 
-[[lua]
+[[lua]]
 === Lua (Цириков)
 
 Интересный минималистичный язык, где в качестве универсальной структуры данных используется помесь
