--- a/fp2019/hw.asciidoc
+++ b/fp2019/hw.asciidoc
@@ -318,10 +318,13 @@ https://github.com/bmstu-iu9/refal-5-lambda[отсюда].
 языком с легко расширяемым синтаксисом.
 
 [[promela]]
-=== Promela
+=== Promela (Лунёв)
 
-Входной язык для утилиты верификации https://en.wikipedia.org/wiki/Promela[Promela].
+Входной язык для утилиты верификации https://en.wikipedia.org/wiki/Promela[Promela]. Думаю, что все
+фичи описаны в http://www.lacl.fr/dima/melo/spin.pdf[слайдах]. Весь "язык" компилируется (с помощью `pan`) в
+конечный автомат, который умеет моделировать в том числе параллельные потоки. Короче, надо написать интерпретатор программ Promela, там в слайдах есть примеры, за одно разберетесь с примитивами синхронизации параллельных потоков.
 
+[[yacc]]
 === YACC
 
 Язык описания синтаксических анализаторов (парсеров). Скорее всего его придется сильно упростить
@@ -330,6 +333,7 @@ https://github.com/bmstu-iu9/refal-5-lambda[отсюда].
 генерируя по описанию парсера код на Haskell/Scala, который выполняет синтаксический анализ.
 Расширениями генерации можно выбрать, например, устранение левой рекурсии.
 
+[[algol]]
 === Ideal Parallel Algol (1 человек)
 
 Стандартный модельный язык для использования в научных ситуациях. Числа, ветвления, присваивания, барьеры
