--- a/papers/pfds/figures/fig.3.5_part2.tex
+++ b/papers/pfds/figures/fig.3.5_part2.tex
@@ -6,28 +6,28 @@
     
     \huge
     
-    % legend
-    \begin{scope}[xshift=7cm, yshift=7cm]
-        \def\inse{3.5mm}
-     %   \draw (-1, -2.5) rectangle (5, 1);
-        
-        \node[tblack, inner sep=\inse] at (0,0) {};
-        \node[tred, inner sep=\inse] at (0,-1.6) {};
-        \node[right=1pt] at (1,0) { -- черный};
-        \node[right=1pt] at (1,-1.6) { -- красный};
-    \end{scope}
+%    % legend
+%    \begin{scope}[xshift=7cm, yshift=7cm]
+%        \def\inse{3.5mm}
+%     %   \draw (-1, -2.5) rectangle (5, 1);
+%        
+%        \node[tblack, inner sep=\inse] at (0,0) {};
+%        \node[tred, inner sep=\inse] at (0,-1.6) {};
+%        \node[right=1pt] at (1,0) { -- черный};
+%        \node[right=1pt] at (1,-1.6) { -- красный};
+%    \end{scope}
     
-    \begin{scope}[yshift=\ystep]
-        \node[tblack] {z}
-            child { node[tred] {x}
-                child { node {a} }
-                child { node[tred] {y}
-                    child {node {b}}
-                    child {node {c}}
-                }
-            }
-            child { node {d} };
-    \end{scope}
+%    \begin{scope}[yshift=\ystep]
+%        \node[tblack] {z}
+%            child { node[tred] {x}
+%                child { node {a} }
+%                child { node[tred] {y}
+%                    child {node {b}}
+%                    child {node {c}}
+%                }
+%            }
+%            child { node {d} };
+%    \end{scope}
     
     \begin{scope}[xshift=\xstep]
         \node[tblack] {x}
@@ -79,8 +79,8 @@
             };
     \end{scope}
     \Huge
-    \draw (0, 0.5cm) node[rotate=-90] {$\Rightarrow$};
-    \draw (0, -8cm) node[rotate=90] {$\Rightarrow$};
+%    \draw (0, 0.5cm) node[rotate=-90] {$\Rightarrow$};
+    \draw (0, -6.5cm) node[rotate=90] {$\Rightarrow$};
     \draw (-4cm, -4cm) node[rotate=0] {$\Rightarrow$};
     \draw (4cm, -4cm) node[rotate=180] {$\Rightarrow$};
 
